--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -183,3 +183,5 @@ td.right {width: 100%;}
 .middle img {vertical-align: middle}
 
 .googlelogo img {height: 20px;}
+
+.cont {width: 600px; margin: 20px; padding: 20px; background: white;}
