epub xhtml uploader & more stuff

--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -15,6 +15,7 @@
     .rt
     = form_for @book do |f|
       = last_action
+      = text_area_tag 'bookhtml'
       = f.submit
 
     .rt.full.googlelogo.middle
