--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -3,9 +3,9 @@
   = javascript_include_tag 'source_manipulation/load'
 
 :javascript
-  var parts = #{3};
-  var gdocid = "#{}"
-  var type = "#{@source.collection ? 'collection' : 'document'}"
+  //var parts = #{1};
+  var external_resource_id = "#{'1-gQSlyoRBysoUWN-LN30KaXHuML4PhCt92Lc5cBme4c'}"
+  var external_resource_type = "#{@source.collection ? 'google_collection' : 'google_document'}"
   
 
 .everything
