--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %title= yield :title
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'application'
     = yield :stylesheets
     = javascript_include_tag :defaults
     = yield :javascript
