exceptions if records not yet saved are not valid in source#create

--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -4,7 +4,7 @@
 
 :javascript
   //var parts = #{1};
-  var external_resource_id = "#{'1-gQSlyoRBysoUWN-LN30KaXHuML4PhCt92Lc5cBme4c'}"
+  var external_resource_id = "#{@source.resource_id}"
   var external_resource_type = "#{@source.collection ? 'google_collection' : 'google_document'}"
   
 
