--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -1,78 +1,12 @@
 #html
-  background: #eee
   padding: 20px
   margin-bottom: 20px
 
 body
-  background: #eee
+  background: #E7E7E7
   font: 12px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif
   margin: 0
   color: #333
-
-p
-  margin-bottom: 2em !important
-
-h1, h2, h3
-  margin: 0
-  line-height: 125%
-  margin-bottom: 1em
-  padding: 0
-
-h1
-  text-align: center
-  font-size: 1.5em
-  font-weight: normal
-
-.bold
-  font-weight: bold
-
-.italic
-  font-style: italic
-
-.underline
-  text-decoration: underline
-
-.line-through
-  text-decoration: line-through
-
-.sub
-  vertical-align: sub
-
-.super
-  vertical-align: super
-
-p
-  &.left
-    text-align: left
-  &.right
-    text-align: right
-  &.center
-    text-align: center
-  &.justify
-    text-align: justify
-
-.foot_ref
-  vertical-align: super
-
-.foot
-  color: #999
-  background: #fea
-  margin-bottom: 1em
-
-
-
-
-
-.illustration img
-  width: 100%
-
-/*span {
- *background: #fea;
- *}
- *p {
- *border: 1px solid #fcc;
- *padding: 20px;
- *}
 
 a
   &:link, &:visited
@@ -80,18 +14,6 @@ a
     text-decoration: none
   &:hover
     text-decoration: underline
-
-
-
-
-    
-    
-    
-
-
-
-h2
-  font-size: 1.5em
 
 hr
   &.separator
@@ -103,23 +25,6 @@ hr
   &.thin
     height: 2px
 
-.full
-  margin-bottom: 1em
-
-.half
-  margin-bottom: 0.5em
-
-.quarter
-  margin-bottom: 0.25em
-
-
-
-.lonely_link
-  text-align: center
-  margin: -20px 0
-
-.label
-  color: #666
 
 .clear
   clear: both
