--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -1,6 +1,7 @@
 - content_for :javascript do
   = javascript_include_tag 'source_manipulation/clean'
   = javascript_include_tag 'source_manipulation/load'
+  = javascript_include_tag 'source_manipulation/save'
 -content_for :stylesheets do
   = stylesheet_link_tag 'books_contents'
 
