--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -26,6 +26,17 @@ hr
     height: 2px
 
 
+#loading_box
+  background: #333
+  color: white
+  padding: 20px
+  position: absolute
+  bottom: 0
+  margin: 0 auto
+  font-size: 20px
+  text-align: center
+  
+
 .clear
   clear: both
 
