--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -35,9 +35,9 @@
         = image_tag "http://dl.dropbox.com/u/7989419/MRF_Kindle_Icon_s.png"
         Kindle
 
-      #toc.item
+      .item
         %h3 Table of Contents
-        .item Cover
+        #toc
 
 
     .wrapper
