--- a/public/stylesheets/sass/books_contents.sass
+++ b/public/stylesheets/sass/books_contents.sass
@@ -84,12 +84,14 @@
       line-height: 125%
       margin-bottom: 1em
       padding: 0
-    h1
+    h1, h2, h3
       text-align: center
       font-size: 1.5em
       font-weight: normal
     h2
-      font-size: 1.5em
+      font-size: 1.25em
+    h3
+      font-size: 1em
     .bold
       font-weight: bold
     .italic
