--- a/public/stylesheets/sass/books_contents.sass
+++ b/public/stylesheets/sass/books_contents.sass
@@ -79,18 +79,19 @@
           width: 100%
 
   #book_contents
-    h1, h2, h3
+    h1, h2, h3, h4, h5, h6
       margin: 0
       line-height: 125%
       margin-bottom: 1em
       padding: 0
-    h1, h2, h3
       text-align: center
-      font-size: 1.5em
+      font-size: 2em
       font-weight: normal
     h2
-      font-size: 1.25em
+      font-size: 1.5em
     h3
+      font-size: 1.25em
+    h4, h5, h6
       font-size: 1em
     .bold
       font-weight: bold
