small improv in UI

--- a/public/stylesheets/sass/books_contents.sass
+++ b/public/stylesheets/sass/books_contents.sass
@@ -26,6 +26,21 @@
     #toc
       >.item
         margin-bottom: 0.25em
+    input[type=submit]
+      background: #649D00
+      color: #fff
+      font-size: 14px
+      padding: 10px
+      border: 0
+      -moz-border-radius: 5px
+      -webkit-border-radius: 5px
+      -khtml-border-radius: 5px
+      border-radius: 5px
+      &:hover
+        background: #E17B00
+      &:active
+        position: relative
+        top: 2px
         
   .section
     background: #f7f7f7
