--- a/app/views/books/contents.html.haml
+++ b/app/views/books/contents.html.haml
@@ -21,13 +21,14 @@
       .item
         = last_action
         = hidden_field_tag 'bookhtml'
-        = f.submit
-      .item
-        = link_to "Reload your document", "#", :id => "reload_book_contents"
+        = f.submit :value => "Next Step"
       .item.googlelogo
         = link_to "http://" do
           Edit your book in&nbsp;
           = image_tag "http://upload.wikimedia.org/wikipedia/en/2/29/Google_Docs_logo.png"
+      .item
+        If you made changes,
+        = link_to "Reload your document", "#", :id => "reload_book_contents"
       .item.preview
         %h3 Preview your book      
         = image_tag "http://dl.dropbox.com/u/7989419/ipad_mini.png"
