--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,5 @@
     = javascript_include_tag :defaults
     = yield :javascript
     = csrf_meta_tag
-  %body
+  %body{:class => (yield :body_class)}
     = yield
