--- a/public/stylesheets/sass/books_contents.sass
+++ b/public/stylesheets/sass/books_contents.sass
@@ -73,7 +73,8 @@
       margin-left: 100px
     .label
       color: #777
-    input[type=text]
+    input[type=text], textarea
+      font-size: 14px
       width: 100%
       padding: 5px
       color: #333
